tests/purs/failing/UnsupportedFFICommonJSExports2.js
import { yes, no } from "some ES module";

exports.yes = yes;
exports.no = no;
